2010-04-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/enable-itron.m4, aclocal/check-itron.m4: Replace
	RTEMS_HAS_ITRON_API with enable_itron.
	* librpc/src/rpc/pmap_rmt.c: Use uintptr_t for better 16bit
	compliance.

2010-04-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/enable-itron.m4: Cosmetics.
	* httpd/Makefile.am: Use LIBHTTPD.
	* shttpd/Makefile.am: Use LIBSHTTPD.
	* configure.ac: Add RTEMS_ENABLE_SHTTPD, RTEMS_ENABLE_HTTPD.
	Introduce AM_CONDITIONALS LIBHTTPD, LIBSHTTPD.
	* aclocal/enable-httpd.m4, aclocal/enable-shttpd.m4: New.

2010-04-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/libc/map_v4v6.c: Use uintptr_t instead of u_long for
	better 16bit target compliance.

2010-04-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/chdir.c: Check for NULL pointer.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libfs/src/rfs/rtems-rfs-bitmaps-ut.c: Fix warning.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libmisc/stringto/stringto_template.h: Remove warning.

2010-04-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/pthread.c: Make default pthread_attr_t match the
	conditionals in the version in newlib. This way it will always be
	right.

2010-04-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/readv.c: Check for < 0 on iov_len, not <= 0. A
	readv() with all iov_len equal to 0 should have no effect.

2010-04-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/sys/mbuf.h: Use uintptr_t instead of u_long
	for 16bit target compliance.
	* libnetworking/libc/gethostbydns.c: Use uintptr_t instead of u_long
	for 16bit target compliance.
	* libnetworking/sys/sysctl.h: Change sysctl_oid->arg2 into int32_t
	for 16bit target compliance.

2010-04-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/shell/fts.c (fts_pow2): Rebase fts_pow2 on
	SIZEOF_SIZE_T * CHAR_BIT.

2010-04-13	Ralf Corsépius <ralf.corsepius@rtems.org>
